--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+server.port = 1012
 spring.application.name=rating-data-service
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/Microservices_EX_DB
+spring.datasource.username=postgres
+spring.datasource.password=tharun
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.initialization-mode=always
+spring.sql.init.mode=always 
+
+#--------------------------------------------------------------------------
+
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+
+spring.jackson.default-property-inclusion= NON_DEFAULT
